--- a/public/backend.css
+++ b/public/backend.css
@@ -3,3 +3,29 @@
 	margin: 3px 0;
 	width: 100%;
 }
+
+.widget .char-picker{
+	display: flex;
+	flex-flow: row wrap;
+	margin-block: 4px;
+}
+.widget .char-picker .char-picker-button{
+	appearance: none;
+	border: 1px solid var(--form-border);
+	background-color: var(--form-bg);
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	font-size: 20px;
+	height: 35px;
+	width: 40px;
+	cursor: pointer;
+	position: relative;
+	transition: background-color 0.2s;
+}
+.widget .char-picker .char-picker-button:hover{
+	background-color: var(--panel-bg);
+}
+.widget .char-picker .char-picker-button:not(:last-of-type){
+	border-right: none;
+}
